# agent-identity-lab

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN_REVIEW.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.hermes/codex-prompts/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
.hermes/plans/: 2026-07-10_163000-agent-identity-lab.md
apps/identity_api/: Dockerfile  dependencies.py  main.py
apps/identity_api/api/: __init__.py  agents.py  audit.py  authorization.py  blueprints.py  delegations.py  sessions.py
apps/identity_api/repositories/: agent_repo.py  blueprint_repo.py
apps/identity_api/services/: policy_service.py  session_service.py
apps/mcp_gateway/: Dockerfile  main.py
apps/mcp_gateway/middleware/: auth.py
apps/mcp_gateway/proxy/: forwarder.py
apps/mcp_gateway/tool_registry/: registry.py
apps/mock_mcp_server/: Dockerfile  main.py
apps/token_broker/: Dockerfile  main.py
apps/token_broker/providers/: base.py  mock_oauth.py  static_secret.py
apps/token_broker/services/: exchange_service.py
blueprints/: deployment-agent.yaml  research-agent.yaml  support-agent.yaml
docs/: architecture.md  demo.md  hermes-integration.md  mcp-integration.md  policy-model.md  threat-model.md  token-model.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md
docs/site/: mdsvex.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js
docs/site/src/: app.css
docs/site/src/lib/: DocLayout.svelte
docs/site/src/routes/: +layout.svelte  +page.svx
docs/site/src/routes/api/: +page.svx
docs/site/src/routes/architecture/: +page.svx
docs/site/src/routes/phases/: +page.svx
docs/site/static/: CNAME
examples/: _support.py
examples/delegated_research/: authorized_read.py  secret_isolation.py
examples/hermes_agent/: invalid_runtime.py  machine_only_session.py  suspended_agent.py
examples/unauthorized_write_attempt/: denied_write.py
policies/: agent_access.rego
scripts/: generate_dev_keys.sh  init_local_db.py
tests/: conftest.py
tests/integration/: test_agent_api.py  test_authorization_api.py  test_blueprint_api.py  test_mcp_gateway.py  test_session_api.py  test_session_success.py  test_token_broker_api.py
tests/unit/: test_attestation.py  test_audit_chain.py  test_blueprint_schemas.py  test_client_sdk.py  test_enums.py  test_policy_properties.py  test_scope_intersection.py  test_token_broker.py  test_token_validation.py  test_tool_registry.py
