[project]
name = "agent-identity-lab"
version = "0.1.0"
description = "Open-source identity and authorization control plane for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Max Espinoza", email = "me@rmax.io"},
]

[tool.uv]
package = false

[tool.uv.sources]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["identity_models", "token_library", "attestation", "audit", "policy_client", "common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ty]
strict = true
