[project]
name = "agent-identity-lab"
version = "0.1.0"
description = "Open-source identity and authorization control plane for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Max Espinoza", email = "me@rmax.io"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "authlib>=1.3.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers>=4.5.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "ty>=0.0.1",
    "aiosqlite>=0.20.0",
    "python-json-logger>=2.0.0",
]

[project.scripts]
identity-api = "apps.identity_api.main:app"
token-broker = "apps.token_broker.main:app"
mcp-gateway = "apps.mcp_gateway.main:app"
mock-mcp = "apps.mock_mcp_server.main:app"

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["identity_models", "token_library", "attestation", "audit", "policy_client", "common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ty]
strict = true
